Add a service for database
- Update .env.example and .gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
 # Go
 GO_VERSION=1.19-alpine
 
-# Port of web app
+# App
 WEB_PORT=8080
+
+# MySQL
+MYSQL_VER=latest
+MYSQL_PORT=33060
+MYSQL_ROOT_PASSWORD=root
+MYSQL_USER=admin
+MYSQL_DATABASE=godb
+MYSQL_PASSWORD=secret
