fix: air version variable not loaded in build process

--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,13 @@
 GO_VERSION=1.22.4
 
 # Air
-AIR_VERSION=1.51.0
+AIR_VERSION=v1.51.0
 
 # App
 WEB_PORT=8080
 
 # MySQL
-MYSQL_VER=latest
+MYSQL_VER=8.0
 MYSQL_PORT=33060
 MYSQL_ROOT_PASSWORD=root
 MYSQL_USER=admin
