--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 # Go
-GO_VERSION=1.22.4
+GO_VERSION=1.24.2
 
 # Air
 AIR_VERSION=v1.51.0
 
 # App
 WEB_PORT=8080
+APP_PORT=3000
 
 # MySQL
 MYSQL_VER=8.0
