--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
         GO_VERSION: ${GO_VERSION}
         AIR_VERSION: ${AIR_VERSION}
     ports:
-      - ${WEB_PORT}:3000
+      - ${WEB_PORT}:${APP_PORT}
     volumes:
       - ./app:/app
 
+  # MySQL
   mysql:
     image: mysql:${MYSQL_VER}
     tty: true
@@ -24,3 +25,15 @@ services:
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+
+  # Postgres
+  psql:
+    image: postgres:${POSTGRES_VERSION}
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    ports:
+      - ${POSTGRES_PORT}:5432
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
