--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ MYSQL_ROOT_PASSWORD=root
 MYSQL_USER=admin
 MYSQL_DATABASE=godb
 MYSQL_PASSWORD=secret
+
+# Postgres
+POSTGRES_VERSION=latest
+POSTGRES_USER=
+POSTGRES_PASSWORD=root
+POSTGRES_DB=
+POSTGRES_PORT=54850
