--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ MYSQL_ROOT_PASSWORD=root
 MYSQL_USER=admin
 MYSQL_DATABASE=godb
 MYSQL_PASSWORD=secret
+
+# Postgres
+POSTGRES_VERSION=
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_PORT=5432
