--- a/app/.air.toml
+++ b/app/.air.toml
@@ -10,7 +10,7 @@ tmp_dir = "tmp"
 # pre_cmd = ["echo 'hello air' > pre_cmd.txt"]
 
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -o ./tmp/main ./cmd/main.go"
+cmd = "go build -o ./tmp/main main.go"
 
 # Array of commands to run after ^C
 # post_cmd = ["echo 'hello air' > post_cmd.txt"]
